--- a/assets/styles/colors.css
+++ b/assets/styles/colors.css
@@ -34,6 +34,10 @@
     --bg-grad-dk-t: var(--c-grey-3);
     --bg-grad-light: rgb(168, 221, 221);
     --bg-grad-light-t: rgba(168, 221, 221, 0.80);
+
+    --bg-gradient:
+        linear-gradient(0deg, var(--bg-grad), var(--bg-grad-t)),
+        url("data:image/svg+xml,%3Csvg viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.30' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
 
 .dark-mode body {
