--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,11 +11,8 @@ html {
 body {
     height: 100dvh;
     filter: contrast(100%) brightness(100%);
-    background:
-        linear-gradient(0deg, var(--bg-grad), var(--bg-grad-t)),
-        url("data:image/svg+xml,%3Csvg viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.30' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-
-    color: var(--c-text)
+    background: var(--bg-grad);
+    color: var(--c-text);
 }
 
 button {
